--- a/main.css
+++ b/main.css
@@ -49,6 +49,8 @@
 
 }
 
+/*Footer*/
+
 .rodape {
   display: flex;
   background-color: #FFFFFF;
@@ -58,14 +60,25 @@
   margin-top: 20px;
   justify-content: space-around;
   align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+
+
+}
+
+.rodape-container {
+  display: flex;
+
+}
+
+.mobile {
+  display: flex;
+  padding: 5rem;
+  gap: 5rem;
 }
 
 .list1 {
   display: flex;
   justify-content: space-around;
-  margin-left: 5rem;
+  margin: 0 5rem 0 5rem;
   align-items: center;
   gap: 5rem
 }
@@ -92,7 +105,7 @@
   flex-direction: column;
   list-style-type: none;
   align-items: flex-start;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 14px;
   line-height: 18px;
   color: black;
@@ -109,7 +122,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-
+  justify-content: center;
 }
 
 
