--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    max-width: 100vw;
 }
 
 body {
@@ -67,8 +68,9 @@ header {
 
 @media screen and (max-width: 748px) {
 
-    body{
-       width: 100vw;}
+    body {
+        width: 100vw;
+    }
 
     header {
         width: 100%;
